2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Make 'wsegpath', 'method', 'fileformat',
	'unicode' (const char *).

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make 'wbr' word delimiter a (const char *).

	* src/abswordseg.h, src/abswordseg.cpp
	  (AbsWordSeg::WordSeg, AbsWordSeg::GetBestSen):
	  - Declare 'wbr' arg (const char *).
	* src/filterx.h, src/filterx.cpp (FilterX::GetWordBreak):
	  - Make it return (const char *) instead of copying string back.
	* src/wordseg.cpp (WordSegmentation):
	  - Declare 'wbr' arg (const char *).
	* src/wordseg.cpp (main):
	  - Make 'wbr' (const char *).
	  - Replace all allocs & copies with pointer assignments.
	  - Remove all deletes.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/swath.1: Update doc for -d option. The dictionary file is now
	a single `swathdic.tri' file.

2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make check functions in worddef.cpp inline.

	* src/Makefile.am, src/worddef.h, -src/worddef.cpp
	(isSpace, isHex, isPunc, isThai):
	  - Move function definitions from worddef.cpp to worddef.h and make
	    them inline.
	  - Remove worddef.cpp from the project.

2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Replace hard checks for Thainess with new function isThai().

	* src/worddef.h, src/worddef.cpp (+isThai): Add the check function.
	* src/filterlatex.cpp (FilterLatex::GetNextToken): Replace hard
	checks (c & 0x80), or (c > 0), with isThai(c) calls.

2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Replace partial copy using temporary null-termination with
	    strncpy() and strncat().
	  - Replace a risky strcpy() on overlapping buffers with memmove().
	  - Split an assignment in if-condition into sepearate statement,
	    for more readability.

2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>
