@@ -1,5 +1,9 @@
 2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/wordseg.cpp (Usage): Print usage on stderr, not stdout.
+
+2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/wordseg.cpp (main): Make 'wsegpath', 'method', 'fileformat',
 	'unicode' (const char *).
 
